// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoginForm > matches snapshot with error and pending 1`] = `
<div>
  <form
    class="LoginFormRoot-sc-x8hdk9-0 jmzUce"
  >
    <div
      class="LoginFormError-sc-x8hdk9-4 gLrpQv"
      role="alert"
    >
      fail
    </div>
    <label
      class="LoginFormLabel-sc-x8hdk9-1 jMTJhy"
    >
      Логин
      <input
        autocomplete="username"
        class="LoginFormInput-sc-x8hdk9-2 gsWFuO"
        disabled=""
        name="login"
        value=""
      />
    </label>
    <label
      class="LoginFormLabel-sc-x8hdk9-1 jMTJhy"
    >
      Пароль
      <input
        autocomplete="current-password"
        class="LoginFormInput-sc-x8hdk9-2 gsWFuO"
        disabled=""
        name="password"
        type="password"
        value=""
      />
    </label>
    <button
      class="LoginFormSubmit-sc-x8hdk9-3 dSfZfn"
      disabled=""
      type="submit"
    >
      Вход…
    </button>
  </form>
  <p
    class="LoginFormFooter-sc-x8hdk9-5 dLGpxE"
  >
    Нет учётной записи? 
    <a
      class="LoginFormFooterLink-sc-x8hdk9-6 iySuIZ"
      data-discover="true"
      href="/register"
    >
      Регистрация
    </a>
  </p>
</div>
`;

exports[`LoginForm > matches snapshot without error 1`] = `
<div>
  <form
    class="LoginFormRoot-sc-x8hdk9-0 jmzUce"
  >
    <label
      class="LoginFormLabel-sc-x8hdk9-1 jMTJhy"
    >
      Логин
      <input
        autocomplete="username"
        class="LoginFormInput-sc-x8hdk9-2 gsWFuO"
        name="login"
        value="a"
      />
    </label>
    <label
      class="LoginFormLabel-sc-x8hdk9-1 jMTJhy"
    >
      Пароль
      <input
        autocomplete="current-password"
        class="LoginFormInput-sc-x8hdk9-2 gsWFuO"
        name="password"
        type="password"
        value="b"
      />
    </label>
    <button
      class="LoginFormSubmit-sc-x8hdk9-3 dSfZfn"
      type="submit"
    >
      Войти
    </button>
  </form>
  <p
    class="LoginFormFooter-sc-x8hdk9-5 dLGpxE"
  >
    Нет учётной записи? 
    <a
      class="LoginFormFooterLink-sc-x8hdk9-6 iySuIZ"
      data-discover="true"
      href="/register"
    >
      Регистрация
    </a>
  </p>
</div>
`;
